--- a/exercicios/07_exercicio_JSON/quiz.html
+++ b/exercicios/07_exercicio_JSON/quiz.html
@@ -13,6 +13,7 @@
 
     <!--JSON-->
     <script type="text/javascript" src="public/jsons/quiz.json" charset="utf-8"></script>
+    <script type="text/javascript" src="public/jsons/info.json" charset="utf-8"></script>
     <!--JS-->
     <script src="public/js/script.js"></script>
     <!--Title-->
