modal final com timeout + tela de artistas

--- a/exercicios/07_exercicio_JSON/index.html
+++ b/exercicios/07_exercicio_JSON/index.html
@@ -21,15 +21,17 @@
 
 <body>
     <header>
-        <div class="container-fluid">
-            <img src="public/imgs/logo.png" class="img-fluid" style="padding: 0.8%; max-width: 5rem; max-height: 5rem;">
+        <div class="container-fluid backzin">
+            <img src="public/imgs/logo.png" class="img-fluid" style=" max-width: 5rem; max-height: 5rem;">
+
         </div>
     </header>
 
-    <p>Selecione o quiz que deseja jogar</p>
+
 
     <!-- inicio cards -->
     <div class="container-fluid teste">
+        <p style="color: white; font-size: 1em;">Selecione o quiz que deseja jogar</p>
         <div class="row d-flex align-items-strch">
             <!-- games -->
             <div class="col-lg-3 col-md-6 col-12">
@@ -58,7 +60,7 @@
                             Text.
                         </p>
                     </div>
-                    <a class="btn btn-info" id="quiz1" onclick="escolheJogo('jooj')">Jogar</a>
+                    <a class="btn btn-info" id="quiz1" onclick="escolheJogo('musicas')">Jogar</a>
                 </div>
             </div>
             <!-- filme e series -->
@@ -73,7 +75,7 @@
                             Text.
                         </p>
                     </div>
-                    <a href="pag_film.html" class="btn btn-info" id="quiz3">Jogar</a>
+                    <a class="btn btn-info" id="quiz1" onclick="escolheJogo('filmes')">Jogar</a>
                 </div>
             </div>
             <!-- animes -->
@@ -88,12 +90,13 @@
                             Text.
                         </p>
                     </div>
-                    <a href="pag_anim.html" class="btn btn-info" id="quiz4">Jogar</a>
+                    <a class="btn btn-info" id="quiz1" onclick="escolheJogo('animes')">Jogar</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- fim do cards -->
+
 </body>
 
 </html>
