--- a/exercicios/07_exercicio_JSON/quiz.html
+++ b/exercicios/07_exercicio_JSON/quiz.html
@@ -33,7 +33,8 @@
     <div class="row">
         <!-- Pergunta -->
         <div class="col-12 text-center font-weight-bold" id="quesTxt" style="padding-top: 0.8rem;">Você sabe qual 'nome do quiz (ex:jogo)' é esse ? Pergunta 1/10"</div>
-        <div class="col-12 text-center font-weight-bold" id="pontuacao" style="padding-top: 0.8rem;"> Pontuacao 0 / 10</div>
+        <div class="col-12 text-center font-weight-bold" id="pontuacao" style="padding-top: 0.8rem;"> Pontuacao 0 / 10
+        </div>
         <!-- Imagem principal-->
         <div class="col-12 text-center" id="displayText" style="padding: 3rem 0;"></div>
     </div>
@@ -58,6 +59,39 @@
         </div>
     </div>
 
+
+    <div class="container">
+        <!-- top 3 -->
+        <div class="row">
+            <!-- item 1 -->
+            <div class="col-lg-4 col-12">
+                <!-- modal -->
+                <div id="contmod1" class="modal fade" data-keyboard="false" data-backdrop="static">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+
+                            <!-- título -->
+                            <div class="modal-header">
+                                <h4>A sua pontuação é de: </h4>
+                                <span id="countdown" class="font-weight-bold display-4">10</span><span id="plural"></span>
+                            </div>
+
+                            <!-- conteudo -->
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <!-- Pontuacao-->
+                                        <p id="pontos" class="text-center font-weight-bold display-3"></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 
