background+cards+borders

--- a/exercicios/07_exercicio_JSON/quiz.html
+++ b/exercicios/07_exercicio_JSON/quiz.html
@@ -11,6 +11,7 @@
     <script src="public/js/jquery.js"></script>
     <script src="public/js/bootstrap.bundle.min.js"></script>
 
+    <link href="public/css/mystyle.css" rel="stylesheet">
     <!--JSON-->
     <script type="text/javascript" src="public/jsons/quiz.json" charset="utf-8"></script>
     <!--JS-->
@@ -32,8 +33,8 @@
 
     <div class="row">
         <!-- Pergunta -->
-        <div class="col-12 text-center font-weight-bold" id="quesTxt" style="padding-top: 0.8rem;">Você sabe qual 'nome do quiz (ex:jogo)' é esse ? Pergunta 1/10"</div>
-        <div class="col-12 text-center font-weight-bold" id="pontuacao" style="padding-top: 0.8rem;"> Pontuacao 0 / 10
+        <div class="col-12 text-center font-weight-bold text-light" id="quesTxt" style="padding-top: 0.8rem;">Você sabe qual 'nome do quiz (ex:jogo)' é esse ? Pergunta 1/10"</div>
+        <div class="col-12 text-center font-weight-bold text-light" id="pontuacao" style="padding-top: 0.8rem;"> Pontuacao 0 / 10
         </div>
         <!-- Imagem principal-->
         <div class="col-12 text-center" id="displayText" style="padding: 3rem 0;"></div>
