--- a/exercicios/07_exercicio_JSON/index.html
+++ b/exercicios/07_exercicio_JSON/index.html
@@ -23,27 +23,21 @@
     <header>
         <div class="container-fluid backzin">
             <img src="public/imgs/logo.png" class="img-fluid" style=" max-width: 5rem; max-height: 5rem;">
-
         </div>
     </header>
 
-
-
     <!-- inicio cards -->
     <div class="container-fluid teste">
-        <p style="color: white; font-size: 1em;">Selecione o quiz que deseja jogar</p>
+        <p class="text-light font-weight-bold text-center display-3">Selecione o quiz que deseja jogar</p>
         <div class="row d-flex align-items-strch">
             <!-- games -->
             <div class="col-lg-3 col-md-6 col-12">
                 <div class="card border-0 bg-transparent">
-                    <!--<img src="public/imgs/games.png" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">-->
+                    <img src="public/imgs/games.jpg" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">
                     <div class="card-body rounded" style="background-color: white;">
                         <h5 class="card-title text-center">
                             JOGOS
                         </h5>
-                        <p class="card-text text-center font-weight-bold">
-                            Text.
-                        </p>
                     </div>
                     <a class="btn btn-info" id="quiz1" onclick="escolheJogo('games')">Jogar</a>
                 </div>
@@ -51,14 +45,11 @@
             <!-- musica -->
             <div class="col-lg-3 col-md-6 col-12">
                 <div class="card border-0 bg-transparent">
-                    <!--<img src="public/imgs/music.png" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">-->
+                    <img src="public/imgs/music.jpg" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">
                     <div class="card-body rounded" style="background-color: white;">
                         <h5 class="card-title text-center">
                             MÚSICAS
                         </h5>
-                        <p class="card-text text-center font-weight-bold">
-                            Text.
-                        </p>
                     </div>
                     <a class="btn btn-info" id="quiz1" onclick="escolheJogo('musicas')">Jogar</a>
                 </div>
@@ -66,14 +57,11 @@
             <!-- filme e series -->
             <div class="col-lg-3 col-md-6 col-12">
                 <div class="card border-0 bg-transparent">
-                    <!--<img src="public/imgs/films.jpg" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">-->
+                    <img src="public/imgs/films.jpg" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">
                     <div class="card-body rounded" style="background-color: white;">
                         <h5 class="card-title text-center">
                             FILMES E SÉRIES
                         </h5>
-                        <p class="card-text text-center font-weight-bold">
-                            Text.
-                        </p>
                     </div>
                     <a class="btn btn-info" id="quiz1" onclick="escolheJogo('filmes')">Jogar</a>
                 </div>
@@ -81,14 +69,11 @@
             <!-- animes -->
             <div class="col-lg-3 col-md-6 col-12">
                 <div class="card border-0 bg-transparent">
-                    <!--<img src="public/imgs/anime.jpg" class="rounded-circle img-fluid img-lg" style="padding: 5%;">-->
+                    <img src="public/imgs/animes.jpg" class="rounded-circle img-fluid img-lg" style="padding: 5%;">
                     <div class="card-body rounded" style="background-color: white;">
                         <h5 class="card-title text-center">
                             ANIMES
                         </h5>
-                        <p class="card-text text-center font-weight-bold">
-                            Text.
-                        </p>
                     </div>
                     <a class="btn btn-info" id="quiz1" onclick="escolheJogo('animes')">Jogar</a>
                 </div>
