--- a/exercicios/chat_view/public/index.html
+++ b/exercicios/chat_view/public/index.html
@@ -41,7 +41,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="pag_film.html">Filmes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pag_game.html">Jogos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#hai">Quem somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#hai">Quem Somos</a></li>
                 </ul>
             </div>
         </div>
@@ -97,7 +97,7 @@
     <div class="conteiner-fluid teste" style="padding-bottom: 3%;">
         <h1 class="text-light font-weight-bold text-center" style="padding: 5% 0%;">Chatbot</h1>
         <p class="text-light text-center" style="padding: 0% 10%;">O nosso chatbot Recomend está disponivel para tirar
-            duvidas e dar recomendaçoes.<br> Para acessa-lo basta clicar no icone localizado no canto inferior esquerdo
+            duvidas e dar recomendaçoes.<br> Para acessa-lo basta clicar no icone localizado no canto inferior direito
             da tela.</p>
     </div>
 
@@ -155,7 +155,7 @@
             <!-- Texto -->
             <div class="col-lg-9 col-md-8 col-12 border rounded">
                 <p id="us" class="text-center text-light font-weight-bold">Somos alunos de graduação estudando
-                    engenharia de computação na Pontifícia Universidade Católica de Campinas</p>
+                    engenharia de computação na Pontifícia Universidade Católica de Campinas. Atualmente no 6º período.</p>
             </div>
             <!-- Mapa -->
             <div class="col-lg-3 col-md-4">
@@ -168,6 +168,12 @@
     </div>
 
     <!-- End quem sou -->
+
+    <div class="teste">
+        <p id="omg" class="text-light text-center" style="font-weight: bold; font-size: large;">Veja o clima da cidade de Campinas</p>
+        <script src="javascripts/weather.js"></script>
+        <button type="submit" onclick="clima()" class="btn btn-dark btn-block">Ver Clima</button>
+    </div>
 
     <!-- inicio footer -->
 
