--- a/exercicios/chat_view/public/pag_film.html
+++ b/exercicios/chat_view/public/pag_film.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="public/css/estilo.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/estilo.css" rel="stylesheet">
 
-    <script src="public/js/jquery.js"></script>
-    <script src="public/js/bootstrap.bundle.min.js"></script>
+    <script src="./javascripts/jquery.js"></script>
+    <script src="./javascripts/bootstrap.bundle.min.js"></script>
     <!-- ion icons -->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link href="public/imgs/moretti-icon.png" rel="icon">
+    <link href="./imagens/moretti-icon.png" rel="icon">
     <title>Exercicio 6</title>
 </head>
 
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <!--logo-->
             <a class="navbar-brand" href="index.html">
-                <img src="public/imgs/moretti.png" height="70" width="160">
+                <img src="./imagens/moretti.png" height="70" width="160">
             </a>
             <!--menu sanduiche-->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -36,7 +36,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="pag_film.html">Filmes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pag_game.html">Jogos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#hai">Quem somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#hai">Quem Somos</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent">
                         <a data-toggle="modal" data-target="#contmod1">
-                            <img src="public/imgs/spiderman.jpg" class="rounded-circle img-fluid max-width:33%"
+                            <img src="./imagens/spiderman.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -75,7 +75,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-lg-6 col-12">
-                                                <img src="public/imgs/spiderman.jpg" class="rounded img-fluid img-lg">
+                                                <img src="./imagens/spiderman.jpg" class="rounded img-fluid img-lg">
                                             </div>
                                             <div class="col-lg-6 col-12">
                                                 <p class="text-justify font-weight-bold modaltext">
@@ -109,7 +109,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent">
                         <a data-toggle="modal" data-target="#contmod2">
-                            <img src="public/imgs/endgame.jpg" class="rounded-circle img-fluid max-width:33%"
+                            <img src="./imagens/endgame.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -129,7 +129,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <img src="public/imgs/endgame.jpg" class="rounded img-fluid img-lg">
+                                                <img src="./imagens/endgame.jpg" class="rounded img-fluid img-lg">
                                             </div>
                                             <div class="col-6">
                                                 <p class="text-justify font-weight-bold modaltext">
@@ -162,7 +162,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent">
                         <a data-toggle="modal" data-target="#contmod3">
-                            <img src="public/imgs/infwar.jpg" class="rounded-circle img-fluid max-width:33%"
+                            <img src="./imagens/infwar.jpg" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -182,7 +182,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <img src="public/imgs/infwar.jpg" class="rounded img-fluid img-lg">
+                                                <img src="./imagens/infwar.jpg" class="rounded img-fluid img-lg">
                                             </div>
                                             <div class="col-6">
                                                 <p class="text-justify font-weight-bold modaltext">
