--- a/exercicios/chat_view/public/pag_game.html
+++ b/exercicios/chat_view/public/pag_game.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="public/css/estilo.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/estilo.css" rel="stylesheet">
 
-    <script src="public/js/jquery.js"></script>
-    <script src="public/js/bootstrap.bundle.min.js"></script>
+    <script src="./javascripts/jquery.js"></script>
+    <script src="./javascripts/bootstrap.bundle.min.js"></script>
     <!-- ion icons -->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link href="public/imgs/moretti-icon.png" rel="icon">
+    <link href="./imagens/moretti-icon.png" rel="icon">
     <title>Exercicio 6</title>
 </head>
 
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <!--logo-->
             <a class="navbar-brand" href="index.html">
-                <img src="public/imgs/moretti.png" height="70" width="160">
+                <img src="./imagens/moretti.png" height="70" width="160">
             </a>
             <!--menu sanduiche-->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -34,11 +34,9 @@
             <div id="menu" class="collapse navbar-collapse">
                 <!--links-->
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="pag_mus.html">Musicas</a></li>
                     <li class="nav-item"><a class="nav-link" href="pag_film.html">Filmes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pag_anim.html">Animes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pag_game.html">Jogos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#hai">Quem sou</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#hai">Quem Somos</a></li>
                 </ul>
             </div>
         </div>
@@ -57,7 +55,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent ">
                         <a data-toggle="modal" data-target="#contmod1">
-                                <img src="public/imgs/hk.png" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">
+                                <img src="./imagens/hk.png" class="rounded-circle img-fluid max-width:33%" style="padding: 5%;">
                         </a>
                         <!-- modal -->
                         <div id="contmod1" class="modal fade">
@@ -76,7 +74,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <img src="public/imgs/hk.png" class="rounded-circle img-fluid max-width:33%">
+                                                <img src="./imagens/hk.png" class="rounded-circle img-fluid max-width:33%">
                                             </div>
                                             <div class="col-6">
                                                 <p class="text-justify font-weight-bold modaltext">Forje seu caminho em Hollow Knight! 
@@ -101,7 +99,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent">
                         <a data-toggle="modal" data-target="#contmod2">
-                            <img src="public/imgs/minecraft.png" class="rounded-circle img-fluid max-width:33%"
+                            <img src="./imagens/minecraft.png" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -121,7 +119,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <img src="public/imgs/minecraft.png" class="rounded-circle img-fluid max-width:33%">
+                                                <img src="./imagens/minecraft.png" class="rounded-circle img-fluid max-width:33%">
                                             </div>
                                             <div class="col-6">
                                                 <p class="text-justify font-weight-bold modaltext">Minecraft é um jogo eletrônico dos gêneros sandbox 
@@ -145,7 +143,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="card bg-transparent">
                         <a data-toggle="modal" data-target="#contmod3">
-                            <img src="public/imgs/lol.png" class="rounded-circle img-fluid max-width:33%"
+                            <img src="./imagens/lol.png" class="rounded-circle img-fluid max-width:33%"
                                 style="padding: 5%;">
                         </a>
                         <!-- modal -->
@@ -165,7 +163,7 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-6">
-                                                <img src="public/imgs/lol.png" class="rounded-circle img-fluid max-width:33%">
+                                                <img src="./imagens/lol.png" class="rounded-circle img-fluid max-width:33%">
                                             </div>
                                             <div class="col-6">
                                                 <p class="text-justify font-weight-bold modaltext">League of Legends é um jogo de estratégia em que duas 
@@ -211,7 +209,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-3">
-                                <img src="public/imgs/tw3.jpg" class="rounded-circle img-fluid max-width:33%">
+                                <img src="./imagens/tw3.jpg" class="rounded-circle img-fluid max-width:33%">
                             </div>
                             <div class="col-9">
                                 <p class="text-justify font-weight-bold modaltext">The Witcher 3: Wild Hunt é um jogo de ação do subgênero RPG desenvolvido pela CD Projekt RED, sendo esse o terceiro
@@ -239,7 +237,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-3">
-                                <img src="public/imgs/dstarve.jpg" class="rounded-circle img-fluid max-width:33%">
+                                <img src="./imagens/dstarve.jpg" class="rounded-circle img-fluid max-width:33%">
                             </div>
                             <div class="col-9">
                                 <p class="text-justify font-weight-bold modaltext">                                
@@ -267,7 +265,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-3">
-                                <img src="public/imgs/stardew.png" class="rounded-circle img-fluid max-width:33%">
+                                <img src="./imagens/stardew.png" class="rounded-circle img-fluid max-width:33%">
                             </div>
                             <div class="col-9">
                                 <p class="text-justify font-weight-bold modaltext">
